=========
Changelog
=========

0.2.6 (unreleased)
==================

- Add component that clones from a Mercurial repository.
- Write supervisord.pid into /run/local instead of ${workdir}/var to ensure
  correct startup after machine crashes.


0.2.5 (2013-04-23)
==================

- Fix interaction between supervisor programs and disabled supervisors: don't
  try to start those programs.


0.2.4 (2013-04-22)
==================

- Force reread/update on supervisor after config changes.


0.2.3 (2013-04-22)
==================

- supervisor: wait up to 60 seconds instead of 30 until supervisor responds to
  a PID after triggering shutdown. Fix bug trying to detect shutdown:
  RuntimeError would cause residual data in output variables.

- supervisor: after reloading, wait as long as the highest startup delay was
  configured on a program to avoid subsequent accidental restarts.

- supervisor: remove 'restart' flag: always restart if we have a relevant
  change.

- supervisor: fix bug in reload logic: path to supervisord.conf was wrong

0.2.2 (2013-04-19)
==================

- Allow specifying 'configure_args' on cmmi.Build or 'args' on cmmi.Configure.

- Fix supervisor's path lookup for event listeners to support the automatically
  installed superlance plugins better. This may change again in the future
  depending on other event listener needs.


0.2.1 (2013-04-18)
==================

- Fix supervisor refactoring: templates contained static paths from my
  development machine. Event listeners were not formatting the event list
  correctly.

- Let RunningSupervisor wait (infinitely) long when reloading if the
  supervisorctl command returns 'SHUTDOWN_STATE'. This supports large
  installations with many services more gracefully but might get stuck.

- Fix supervisor's Nagios check: I removed the bin/py custom interpreter and
  didn't notice it was used by the check. Put it back.

0.2 (2013-04-18)
================
