@@ -171,17 +171,15 @@ def topological_sort(graph):
     return sorted
 
 
-def cmd(cmd, silent=False):
-    stdin = open('/dev/null')
+def cmd(cmd, silent=False, ignore_returncode=False):
     process = subprocess.Popen(
         [cmd],
         stdout=subprocess.PIPE,
         stderr=subprocess.PIPE,
-        stdin=stdin,
+        stdin=subprocess.PIPE,
         shell=True)
     stdout, stderr = process.communicate()
-    retcode = process.poll()
-    if retcode:
+    if process.returncode:
         if not silent:
             print("STDOUT")
             print("=" * 72)
@@ -189,9 +187,10 @@ def cmd(cmd, silent=False):
             print("STDERR")
             print("=" * 72)
             print(stderr)
-        raise RuntimeError(
-            'Command "{}" returned unsuccessfully.'.format(cmd), retcode)
-    stdin.close()
+        if not ignore_returncode:
+            raise RuntimeError(
+                'Command "{}" returned unsuccessfully.'.format(cmd),
+                process.returncode, stdout, stderr)
     return stdout, stderr
 
 
